# AlphaBuilder

./: Dockerfile  README.md
alpha-builder-backend/: .dockerignore  .env.example  .eslintrc.js  Dockerfile  README.md  eslint.config.js  jest.config.js  jest.config.mjs  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
alpha-builder-backend/prisma/: schema.prisma
alpha-builder-backend/src/: app.module.ts  main.ts
alpha-builder-backend/src/auth/: auth.controller.ts  auth.service.ts
alpha-builder-ethereum/: README.md  hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
alpha-builder-ethereum/contracts/: EmailAAFactory.sol  EmailAAWallet.sol  IZKEmailVerifier.sol
alpha-builder-ethereum/contracts/mock/: ZKEmailVerifierMock.sol
alpha-builder-ethereum/scripts/: deployFactory.ts
alpha-builder-frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
alpha-builder-frontend/public/: galxe.json
alpha-builder-frontend/src/: App.tsx  index.css  main.tsx
alpha-builder-frontend/src/api/: client.ts
alpha-builder-frontend/src/components/: BinanceShadowForm.tsx  MetaMaskTest.tsx  ResultPanel.tsx  StabilityFeed.tsx  StabilityTable.tsx  ZkEmailFlow.tsx  navbar.tsx
alpha-builder-frontend/src/hooks/: useAirdropFeed.ts  useAirdropHistory.ts  useEmailAuth.tsx  useMetaMaskAuth.tsx  useStabilityFeed.ts
alpha-builder-frontend/src/pages/: FAQPage.tsx  HomePage.tsx  LoginPage.tsx  MyPage.tsx  (+2 more)
alpha-builder-solana/: Anchor.toml  Cargo.toml  README.md
alpha-builder-solana/programs/alpha_builder/: Cargo.toml
alpha-builder-solana/programs/alpha_builder/src/: errors.rs  lib.rs  state.rs
alpha-builder-solana/tests/program-test/: Cargo.toml
alpha-builder-solana/tests/program-test/src/: utils.rs
alpha-builder-solana/tests/program-test/tests/: alpha_builder.rs
(+25 files in other folders)
