[workspace]
members = [
    "programs/alpha_builder",
    "tests/program-test",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.12"
solana-program-test = "1.18.12"
solana-sdk = "1.18.12"
thiserror = "1.0"
bytemuck = { version = "1.15", features = ["derive"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Alpha Builder Contributors"]
