[package]
name = "alpha_builder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Solana program powering the Alpha Builder stack."

[lib]
name = "alpha_builder"
crate-type = ["cdylib", "lib"]

[features]
default = ["entrypoint"]
entrypoint = []
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
bytemuck.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
